--- a/scraping/templates/scraping/home.html
+++ b/scraping/templates/scraping/home.html
@@ -2,24 +2,13 @@
  {% block title %} Home {% endblock %}
 
 {% block content %}
-    {% for obj in object_list %}
-
-        <div class="card my-3" >
-      <h5 class="card-header"><a href="{{ obj.url }}">{{ obj.title }}</a> </h5>
-       <div class="card-body">
-           <h4>{{ obj.company }} </h4>
-        <p class="card-text">{{ obj.description }}</p>
-          <p>{{ obj.city.name }} | {{ obj.language.name }} |
-              <small>{{ obj.timestamp|date:"d-m-Y" }} </small></p>
-
-        </div>
+    <div class="row">
+        <div class="col"><h2 class="text-center my-3"> Сервис по сбору и рассылки вакансий</h2></div>
     </div>
-{% empty %}
-        <h3>К сожелению по вашему запросу ничего не найдено</h3>
-    {% endfor %}
     <div class="row mx-auto">
-        <div class="col-md-6 mx-auto">
-            <form method="GET" action="">
+        <div class="col-md-8 mx-auto">
+            <h4 class="my-2">Для просмотра доступных вакансий заполните форму по одному из полей</h4>
+            <form method="GET" action="{% url 'list' %}">
         <div class="form-group">
         {{ form.as_p }}
   </div>
