--- a/scraping/templates/scraping/list.html
+++ b/scraping/templates/scraping/list.html
@@ -2,23 +2,25 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
-    {% for obj in object_list %}
+
+
+
+    {% if object_list %}
+        <h3 class="my-4 text-center">Результаты согласно вашему запросу</h3>
+        {% for obj in object_list %}
 
         <div class="card my-3">
             <h5 class="card-header"><a href="{{ obj.url }}">{{ obj.title }}</a></h5>
             <div class="card-body">
-                <h4>{{ obj.company }} </h4>
+
                 <p class="card-text">{{ obj.description }}</p>
+                   <p>{{ obj.company }} </p>
                 <p>{{ obj.city.name }} | {{ obj.language.name }} |
                     <small>{{ obj.timestamp|date:"d-m-Y" }} </small></p>
 
             </div>
         </div>
-    {% empty %}
-        <h3>К сожелению по вашему запросу ничего не найдено</h3>
-    {% endfor %}
-
-    {% if object_list %}
+        {% endfor %}
         <div class="row">
             <div class="col">
                 <nav aria-label="Page navigation example">
@@ -74,7 +76,8 @@
                 {#                </div>#}
             </div>
         </div>
-
+    {% else %}
+                <h3 class="my-4 text-center>К сожелению по вашему запросу ничего не найдено</h3>
     {% endif %}
     <div class="row mx-auto">
         <div class="col-md-6 mx-auto">
