--- a/templates/base.html
+++ b/templates/base.html
@@ -1,48 +1,46 @@
+{% load static %}
+
+{%  url 'accounts:update' as update_url %}
+{%  url 'accounts:register' as register_url %}
+{%  url 'accounts:login' as login_url %}
+
+
 <!doctype html>
 <html lang="en">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" href="{% static 'favicon.ico' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>Hello, world!</title>
 </head>
 <body>
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">JF</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #bbbbbb;">
+        <a class="navbar-brand" href="{% url 'home' %}" id="brand">Scraping Service</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link disabled" href="{% url 'accounts:logout' %}">Выйти</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="{% url 'accounts:update' %}">Настройки</a>
+                    <li class="nav-item" {% if request.path == update_url %} active {% endif %}>
+                        <a class="nav-link disabled" href="{% url 'accounts:update' %}">Профиль</a>
                     </li>
                 {% else %}
-                    <li class="nav-item">
+                    <li class="nav-item"{% if request.path == login_url %} active {% endif %}>
                         <a class="nav-link disabled" href="{% url 'accounts:login' %}">Войти</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item"{% if request.path == register_url %} active {% endif %}>
                         <a class="nav-link disabled" href="{% url 'accounts:register' %}">Регистрация</a>
                     </li>
                 {% endif %}
